Bug 544601 - [12] npe with a switch statement in switch expression